--- a/about-us.html
+++ b/about-us.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Home:Ramananda College</title>
+        <title>Ramananda College</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 <!--css file-->
@@ -11,9 +11,7 @@
 <!--   fontawesome css-->
    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" rel="stylesheet" type="text/css">
    <script src="assets/js/jquery-3.5.1.min.js"></script>
-   
-   
-    </head>
+   </head>
     <body>
          <div class="container-fluid bg-info">
              <div class="container">
@@ -23,13 +21,13 @@
                    </div>
                    
                    <div class="col-sm-4 col-5">
-                       <h1 class="logo-head">RAMANANDA COLLEGE</h1>
-                   </div>
+                    <h1 class="logo-head" style="font-family: 'Edwardian Script ITC',sans-serif;font-size: 54px;font-weight: bold;">Ramananda College</h1><h3 style="font-style: italic;text-align: center;">Bishnupur, Bankura</h3>
+                  </div>
                    
                    <div class="col-sm-4 col-4">
                     <div class="ico-icon">
                     <a href="https://www.facebook.com/"><i class="fab fa-facebook-f fa-2x"></i></a>
-                    <a href="https://twitter.com/"><i class="fab fa-twitter fa-2x "></i></a>
+                    <a href="index.html"><i class="fab fa-twitter fa-2x "></i></a>
                     <a href="https://www.instagram.com/"><i class="fab fa-instagram fa-2x "></i></a>
                      </div> 
                    </div> 
@@ -64,7 +62,7 @@
          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
            <a class="dropdown-item" href="about-us.html">About Us</a>
            <a class="dropdown-item" href="mission-&-vision.html">Student Life</a> 
-           <a class="dropdown-item" href="principle-message.html">Developer's Message</a> 
+           <a class="dropdown-item" href="message.html">Developer's Message</a> 
          </div>
        </li> 
        <li class="nav-item dropdown">
@@ -137,7 +135,11 @@
 		<div class="col-sm-4">
 			<h3 class="heading-about">OUR MISSION</h3>
 			<p>
-        "Our mission in our Ramananda College webpage is to empower and inspire the students here to achieve their maximum potential and become responsible global citizens.* We have opened this webpage to develop our knowledge but if anyone wants to know how to make a webpage and  How to upload we * them. We are dedicated to providing quality education that encourages critical thinking, creativity and innovation. Through our comprehensive curriculum, we aim to cultivate. A passion for lifelong learning and values ​​of integrity, compassion and social responsibility.  We strive to create a supportive and inclusive learning environment that nurtures personal growth and encourages students to become leaders in their chosen fields. Our mission is to equip students with the knowledge, skills and moral values ​​necessary for success in a changing world. Together  , we and all are committed to shaping the future and making a positive impact on society.”
+        "Our mission in our Ramananda College webpage is to empower and inspire the students here to achieve their maximum potential and become responsible global citizens.
+        * We have opened this webpage to develop our knowledge but if anyone wants to know how to make a webpage and  How to upload them.
+         We are dedicated to providing quality education that encourages critical thinking, creativity and innovation. 
+         Through our comprehensive curriculum, we aim to cultivate. A passion for lifelong learning and values ​​of integrity, compassion and social responsibility. 
+          We strive to create a supportive and inclusive learning environment that nurtures personal growth and encourages students to become leaders in their chosen fields. Our mission is to equip students with the knowledge, skills and moral values ​​necessary for success in a changing world. Together  , we and all are committed to shaping the future and making a positive impact on society.”
       </p><br>
 		</div>
 	</div>
@@ -150,7 +152,7 @@
       <div class="col-sm-6">
          <div class="row">
              <div class="col-sm-6">
-                 <span>Designed with  by rnc_cs_student</span>
+                 <span>Designed  by rnc_cs_student</span>
              </div>
              <div class="col-sm-6">
                   <span>© 2023. All Rights Reserved.</span>
