--- a/department.html
+++ b/department.html
@@ -23,13 +23,13 @@
                    </div>
                    
                    <div class="col-sm-4 col-5">
-                       <h1 class="logo-head">RAMANANDA COLLEGE</h1>
-                   </div>
+                    <h1 class="logo-head" style="font-family: 'Edwardian Script ITC',sans-serif;font-size: 54px;font-weight: bold;">Ramananda College</h1><h3 style="font-style: italic;text-align: center;">Bishnupur, Bankura</h3>
+                  </div>
                    
                    <div class="col-sm-4 col-4">
                     <div class="ico-icon">
                     <a href="https://www.facebook.com/"><i class="fab fa-facebook-f fa-2x"></i></a>
-                    <a href="https://twitter.com/"><i class="fab fa-twitter fa-2x "></i></a>
+                    <a href="index.html"><i class="fab fa-twitter fa-2x "></i></a>
                     <a href="https://www.instagram.com/"><i class="fab fa-instagram fa-2x "></i></a>
                      </div> 
                    </div> 
@@ -65,7 +65,7 @@
          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
            <a class="dropdown-item" href="about-us.html">About Us</a>
            <a class="dropdown-item" href="mission-&-vision.html">Student Life</a> 
-           <a class="dropdown-item" href="principle-message.html">Developer's Message</a> 
+           <a class="dropdown-item" href="message.html">Developer's Message</a> 
          </div>
        </li> 
        <li class="nav-item dropdown">
@@ -175,9 +175,6 @@
       <h3 class="heading-about">Education</h3>
     </div>  
     <div class="col-sm-4">
-      <h3 class="heading-about">Economics</h3>
-    </div>  
-    <div class="col-sm-4">
 			<h3 class="heading-about">Pol. Science</h3>
 		</div> 
     <div class="col-sm-4">
@@ -205,7 +202,7 @@
       <div class="col-sm-6">
          <div class="row">
              <div class="col-sm-6">
-                 <span>Designed with  by rnc_cs_student</span>
+                 <span>Designed by rnc_cs_student</span>
              </div>
              <div class="col-sm-6">
                   <span>© 2023. All Rights Reserved.</span>
