--- a/message.html
+++ b/message.html
@@ -23,13 +23,13 @@
                    </div>
                    
                    <div class="col-sm-4 col-5">
-                       <h1 class="logo-head">RAMANANDA COLLEGE</h1>
-                   </div>
+                    <h1 class="logo-head" style="font-family: 'Edwardian Script ITC',sans-serif;font-size: 54px;font-weight: bold;">Ramananda College</h1><h3 style="font-style: italic;text-align: center;">Bishnupur, Bankura</h3>
+                  </div>
                    
                    <div class="col-sm-4 col-4">
                     <div class="ico-icon">
                     <a href="https://www.facebook.com/"><i class="fab fa-facebook-f fa-2x"></i></a>
-                    <a href="https://twitter.com/"><i class="fab fa-twitter fa-2x "></i></a>
+                    <a href="index.html"><i class="fab fa-twitter fa-2x "></i></a>
                     <a href="https://www.instagram.com/"><i class="fab fa-instagram fa-2x "></i></a>
                      </div> 
                    </div> 
@@ -149,7 +149,7 @@ Sudip Majhi</p>
       <div class="col-sm-6">
          <div class="row">
              <div class="col-sm-6">
-                 <span>Designed with  by rnc_cs_student</span>
+                 <span>Designed  by rnc_cs_student</span>
              </div>
              <div class="col-sm-6">
                   <span>© 2023. All Rights Reserved.</span>
