--- a/message.html
+++ b/message.html
@@ -54,7 +54,7 @@
          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
            <a class="dropdown-item" href="https://tawk.to/chat/649371c8cc26a871b023f2b7/1h3fv8u61">livechat</a>
            <!--<button on click="changeColor()" class="dropdown-item" href="https://openai.com/blog/chatgpt">ChatGpt </button>-->
-           <a class="dropdown-item" href="https://openai.com/blog/chatgpt">Click:Try ChatGpt for Question-Solving</a>
+           <a class="dropdown-item" href="https://chat.openai.com/auth/login">ChatGpt for Question-Solving</a>
          </div>
        </li>
        <li class="nav-item dropdown">
@@ -94,11 +94,9 @@
            Notice
          </a>
          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-           <a class="dropdown-item" href="https://www.bankurauniv.ac.in/uploads/tempimagepdflink/1687367745.pdf">UG</a> 
-           <a class="dropdown-item" href="https://www.bankurauniv.ac.in/uploads/tempimagepdflink/1687164025.pdf">PG</a> 
-           <a class="dropdown-item" href="https://ramanandacollege.org/notice/NOTICE%20FOR%20OASIS%20SCHOLARSHIP%20(4).pdf">scholarship</a> 
-           <a class="dropdown-item" href="ug.html">UG Examination Notice:Bankura University</a> 
-           <a class="dropdown-item" href="https://www.bankurauniv.ac.in/uploads/tempimagepdflink/1686398881.pdf">PG Examination Notice:Bankura University</a>
+           <a class="dropdown-item" href="ugnotice.html">UG</a> 
+           <a class="dropdown-item" href="pgnotice.html">PG</a> 
+           <a class="dropdown-item" href="scholarshipnotice.html">scholarship</a> 
            <a class="dropdown-item" href="https://cms.ecounselling.nic.in/CMSAdmin/Handler/FileHandler.ashx?B=119&A=200&F=44&L=P">Others Exam Preparation</a>
          </div>
        </li> 
