--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
        <!-- HTML code for the section where the latest link will be displayed -->
 <div id="latest-link-section">
   <marquee direction="left" scrollamount="4" scrolldelay="10" onmouseover="this.setAttribute('scrollamount',0,0);this.stop();" onmouseout="this.setAttribute('scrollamount',4,0);this.start();">
-  <img src="RNC Website\assets\images\new.png">
+  <img src="assets/images/new.gif">
   <h><b>Important Link:</b></h>
   <a id="latest-link" href="https://www.ramanandacollege.org/" class="animated-link">Ramananda College Official Website </a>||
   <a id="latest-link" href="https://bkuresults01.com/oas/login/auth" class="animated-link">Bankura University Student Login Page </a>||
@@ -301,7 +301,7 @@
                 <h4>ADMISSIONS</h4>
                 <h5>OPEN FOR 2023-2024</h5>
                 <a href="https://www.ramanandacollege.org/">Visit Official Website</a>
-                <img src="RNC Website\assets\images\new.png">
+                <img src="assets/images/new.gif">
                 <style>
                   .colored-text {
                     color: white; /* Text color */
