--- a/pgnotice.html
+++ b/pgnotice.html
@@ -92,12 +92,10 @@
            Notice
          </a>
          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-           <a class="dropdown-item" href="https://www.bankurauniv.ac.in/uploads/tempimagepdflink/1687367745.pdf">UG</a> 
-           <a class="dropdown-item" href="https://www.bankurauniv.ac.in/uploads/tempimagepdflink/1687164025.pdf">PG</a> 
-           <a class="dropdown-item" href="https://ramanandacollege.org/notice/NOTICE%20FOR%20OASIS%20SCHOLARSHIP%20(4).pdf">scholarship</a> 
-           <a class="dropdown-item" href="ug.html">UG Examination Notice:Bankura University</a> 
-           <a class="dropdown-item" href="https://www.bankurauniv.ac.in/uploads/tempimagepdflink/1686398881.pdf">PG Examination Notice:Bankura University</a>
-           <a class="dropdown-item" href="https://cms.ecounselling.nic.in/CMSAdmin/Handler/FileHandler.ashx?B=119&A=200&F=44&L=P">Others Exam Preparation</a>
+           <a class="dropdown-item" href="ugnotice.html">UG</a> 
+           <a class="dropdown-item" href="pgnotice.html">PG</a> 
+           <a class="dropdown-item" href="scholarshipnotice.html">scholarship</a> 
+           <a class="dropdown-item" href="https://cms.ecounselling.nic.in/CMSAdmin/Handler/FileHandler.ashx?B=119&A=2">Others Exam Preparation</a>
          </div>
        </li> 
        <li class="nav-item dropdown">
@@ -114,7 +112,7 @@
        </ul> 
    </div>
    </nav>
-  <h1>College Notices</h1>
+  <h1>PG Notices</h1>
   <ul>
     <li><a href="https://ramanandacollege.org/notice/PG%20ROUTINE%20SEM%202_compressed%20(1).pdf" download>PG Routine</a></li>
     <li><a href="https://ramanandacollege.org/notice/PG%20FORM%20FILLUP%20SEM-4(2022-2023).pdf" download>Notice 2</a></li>
