--- a/scholarshipnotice.html
+++ b/scholarshipnotice.html
@@ -92,11 +92,9 @@
            Notice
          </a>
          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-           <a class="dropdown-item" href="https://www.bankurauniv.ac.in/uploads/tempimagepdflink/1687367745.pdf">UG</a> 
-           <a class="dropdown-item" href="https://www.bankurauniv.ac.in/uploads/tempimagepdflink/1687164025.pdf">PG</a> 
-           <a class="dropdown-item" href="https://ramanandacollege.org/notice/NOTICE%20FOR%20OASIS%20SCHOLARSHIP%20(4).pdf">scholarship</a> 
-           <a class="dropdown-item" href="ug.html">UG Examination Notice:Bankura University</a> 
-           <a class="dropdown-item" href="https://www.bankurauniv.ac.in/uploads/tempimagepdflink/1686398881.pdf">PG Examination Notice:Bankura University</a>
+           <a class="dropdown-item" href="ugnotice.html">UG</a> 
+           <a class="dropdown-item" href="pgnotice.html">PG</a> 
+           <a class="dropdown-item" href="scholarshipnotice.html">scholarship</a> 
            <a class="dropdown-item" href="https://cms.ecounselling.nic.in/CMSAdmin/Handler/FileHandler.ashx?B=119&A=200&F=44&L=P">Others Exam Preparation</a>
          </div>
        </li> 
@@ -114,7 +112,7 @@
        </ul> 
    </div>
    </nav>
-  <h1>College Notices</h1>
+  <h1>Scholarship Notices</h1>
   <ul>
     <li><a href="https://ramanandacollege.org/notice/notice%20oasis.pdf" download>Oasis</a></li>
     <li><a href="https://ramanandacollege.org/notice/OASIS%20SCHOLARSHIP.pdf" download>Oasis2</a></li>
